[package]
name = "qd-warm-up"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
color-eyre = "0.6.5"
ecow = { version = "0.2.6", features = ["serde"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
float-ord = "0.3.2"
hickory-resolver = { version = "0.25.2", features = ["https-aws-lc-rs", "tls-aws-lc-rs"] }
http-body = "1.0.1"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
kanal = "0.1.1"
rustls = "0.23.31"
rustls-native-certs = "0.8.1"
serde = { version = "1.0.225", features = ["derive"] }
simd-json = { version = "0.16.0", features = ["beef"] }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "io-std"] }
tokio-rustls = "0.26.3"
uuid = { version = "1.18.1", features = ["serde"] }
